--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,3 @@
-NEXT_PUBLIC_API_ENDPOINT=https://1y8qy0m881.execute-api.us-east-1.amazonaws.com/prod
+NEXT_PUBLIC_API_ENDPOINT=https://32wulz9j73.execute-api.us-east-1.amazonaws.com/prod
 NEXT_PUBLIC_AWS_REGION=us-east-1
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=artforge-portfolio-prod-website
-AWS_CLOUDFRONT_DISTRIBUTION_ID=E2INKLRFS6P03G
